try safari flicker fix 3

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
   --text-secondary: #ececec;
   --bg-primary: #23232e;
   --bg-secondary: #141418;
-  --transition-speed: 600ms;
+  --webkit-transition-speed: 600ms;
 }
 
 @keyframes slideInFromLeft {
